--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 == README
 
-[![Build Status](https://travis-ci.org/BenBarber/jwt-rails-api.svg?branch=master)](https://travis-ci.org/BenBarber/jwt-rails-api)
+{<img src="https://travis-ci.org/BenBarber/jwt-rails-api.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/BenBarber/jwt-rails-api]
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
