--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 == README
 
-{<img src="https://travis-ci.org/BenBarber/jwt-rails-api.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/BenBarber/jwt-rails-api]
+{<img src="https://travis-ci.org/BenBarber/jwt-rails-api.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/BenBarber/jwt-rails-api] {<img src="https://codeclimate.com/github/BenBarber/jwt-rails-api/badges/gpa.svg" />}[https://codeclimate.com/github/BenBarber/jwt-rails-api]
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
